--- a/home.html
+++ b/home.html
@@ -39,8 +39,8 @@
 </head>
 <body class="bg-bgc text-white">
 
-  <nav class="h-16 bg-indigo-950 fixed right-0 left-0 top-0 z-50">
-    <div class="container h-full flex items-center justify-between">
+  <nav class="h-16 bg-indigo-950 absolute right-0 left-0 top-0 z-50">
+    <div class="container h-full flex items-center justify-between px-5 sm:px-0">
       <h1 class="text-2xl">GSB</h1>
       
       <ul class="nav-items flex gap-3 items-center absolute md:static right-0 z-40 flex-col md:flex-row bg-bgc md:bg-transparent top-16 w-96 h-60 justify-center">
